; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/fslib/btrfslib/extr_btrfslib.c_do_full_trim.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/fslib/btrfslib/extr_btrfslib.c_do_full_trim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i64, i64, i64, i64, i32 }

@DeviceDsmAction_Trim = common dso_local global i32 0, align 4
@DEVICE_DSM_FLAG_ENTIRE_DATA_SET_RANGE = common dso_local global i32 0, align 4
@DEVICE_DSM_FLAG_TRIM_NOT_FS_ALLOCATED = common dso_local global i32 0, align 4
@IOCTL_STORAGE_MANAGE_DATA_SET_ATTRIBUTES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @do_full_trim to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_full_trim(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__, align 8
  store i32 %0, i32* %2, align 4
  %5 = call i32 @RtlZeroMemory(%struct.TYPE_4__* %4, i32 48)
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store i32 48, i32* %6, align 8
  %7 = load i32, i32* @DeviceDsmAction_Trim, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 6
  store i32 %7, i32* %8, align 8
  %9 = load i32, i32* @DEVICE_DSM_FLAG_ENTIRE_DATA_SET_RANGE, align 4
  %10 = load i32, i32* @DEVICE_DSM_FLAG_TRIM_NOT_FS_ALLOCATED, align 4
  %11 = or i32 %9, %10
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 5
  store i64 0, i64* %13, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 4
  store i64 0, i64* %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  store i64 0, i64* %16, align 8
  %17 = load i32, i32* %2, align 4
  %18 = load i32, i32* @IOCTL_STORAGE_MANAGE_DATA_SET_ATTRIBUTES, align 4
  %19 = call i32 @NtDeviceIoControlFile(i32 %17, i32* null, i32* null, i32* null, i32* %3, i32 %18, %struct.TYPE_4__* %4, i32 48, i32* null, i32 0)
  ret void
}

declare dso_local i32 @RtlZeroMemory(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @NtDeviceIoControlFile(i32, i32*, i32*, i32*, i32*, i32, %struct.TYPE_4__*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
